--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">IDANCE ADMIN</string>
     <string name="th_m">Thêm</string>
+    <string name="vnd"> vnđ</string>
+    <string name="confirm_description">Chọn <b>Xác nhận</b> để gia hạn với gói cước hiện tại hoặc <b>Thêm mới</b> để gia hạn với gói cước khác.</string>
 </resources>
